# mag_generalized_DE

./: CMakeLists.txt  main.cpp
differential_evolution/: DifferentialEvolutionAlgorithm.cpp  DifferentialEvolutionAlgorithm.h  OptimizedDE.cpp  OptimizedDE.h
entities/: Arm.cpp  Arm.h  ArmSegment.cpp  ArmSegment.h  Result.cpp  Result.h  Robot.cpp  Robot.h
utils/: MatricesUtils.cpp  MatricesUtils.h  TestingMatricesUtils.cpp  TestingMatricesUtils.h  Trigonometry.cpp  Trigonometry.h  VectorOperations.cpp  VectorOperations.h
utils/arguments/: Argument.h  argh.h
